k8s/prometheus-stack/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: "grafana.pro.local.perelohome.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.pro.local.perelohome.com
    secretName: monitoring-grafana-tls-secret
